# ink-cross-contract-example-no-circular-dep

./: Cargo.toml  README.md
contracts/one/: Cargo.toml  lib.rs
contracts/two/: Cargo.toml  lib.rs
traits/: one.rs  two.rs
