[package]
name = "one_two_project"
version = "3.0.0"
authors = ["Brushfam <green@727.ventures, dominik.krizo@727.ventures>"]
edition = "2021"

[dependencies]
ink = { version = "~4.0.0", default-features = false}

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

# These dependencies
openbrush = { tag = "3.0.0", git = "https://github.com/727-Ventures/openbrush-contracts", default-features = false }

[lib]
name = "one_two_project"
path = "lib.rs"
crate-type = [
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    # These dependencies
    "openbrush/std",
]

[profile.dev]
codegen-units = 16