[package]
name = "two"
version = "0.1.0"
authors = ["adarsh"]
edition = "2021"
publish = false

[dependencies]
ink = { version = "4.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.3", default-features = false, features = [
    "derive",
], optional = true }
one_two_project = { path = "../..", default-features = false }
openbrush = { tag = "3.0.0", git = "https://github.com/727-Ventures/openbrush-contracts", default-features = false }


[dev-dependencies]

[lib]
name = "two"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
    # Used for ABI generation.
    "rlib",
]

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std", "openbrush/std"]
ink-as-dependency = []
e2e-tests = []
